added search by genre

--- a/inventory.ini
+++ b/inventory.ini
@@ -1,6 +1,6 @@
 [Song1]
 artist = The irrepresibles
-song title = Let go
+title = Let go
 remix = Tinlicker remix
 mashup = N/A
 genre = N/A
@@ -8,7 +8,7 @@ released = Yes
 
 [Song2]
 artist = Robert Miles
-song title = Children
+title = Children
 remix = Tinlicker remix
 mashup = N/A
 genre = N/A
@@ -16,7 +16,7 @@ released = Yes
 
 [Song3]
 artist = Sian Evans
-song title = Hide U
+title = Hide U
 remix = Tinlicker remix
 mashup = N/A
 genre = N/A
@@ -24,7 +24,7 @@ released = Yes
 
 [Song4]
 artist = Hardwell, Timmy Trumpet
-song title = Revolution.
+title = Revolution.
 remix = N/A
 mashup = N/A
 genre = Big Room
@@ -32,7 +32,7 @@ released = Yes
 
 [Song5]
 artist = Abba
-song title = Voulez-Vous
+title = Voulez-Vous
 remix = Hardwell remix
 mashup = N/A
 genre = Techno
@@ -40,7 +40,7 @@ released = Yes
 
 [Song6]
 artist = Alex Gaudino
-song title = Destination Calabria
+title = Destination Calabria
 remix = Hardwell remix
 mashup = N/A
 genre = Techno
@@ -48,7 +48,7 @@ released = no
 
 [Song7]
 artist = Basstrologe
-song title = somebody to love
+title = somebody to love
 remix = N/A
 mashup = N/A
 genre = Techno
@@ -57,7 +57,7 @@ released = yes
 [Song8]
 label = N/A
 artist = Energy 52
-song title = Cafe del mar
+title = Cafe del mar
 remix = Oliver Heldens remix
 mashup = N/A
 genre = Techno
